Criando algumas classes

--- a/produtos/produtos/src/main/resources/application.properties
+++ b/produtos/produtos/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+server.port=8088
+spring.jpa.hibernate.ddl-auto=update
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=root
+spring.data.mongodb.password=root
+spring.data.mongodb.database=admin
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+logging.level.com.example.demo=DEBUG
+logging.file.name=ProdutosLogFile.log
