--- a/produtos/produtos/src/main/resources/application.properties
+++ b/produtos/produtos/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.username=root
 spring.data.mongodb.password=root
-spring.data.mongodb.database=admin
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate=ERROR
+spring.data.mongodb.database=produtos
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
 logging.level.com.example.demo=DEBUG
 logging.file.name=ProdutosLogFile.log
